2002-06-22	<mschimek@users.sf.net>

	* doc/Makefile.am: Modified to permit building libzvbi in
	  a separate directory.

2002-06-17	<mschimek@users.sf.net>

	* m4, po, config.rpath: Added because cannot use autogen.sh
	  gettextize --force since gettext 0.11. The fine hack insists
	  on updating already updated Makefile.am's and configure.in.
	* po/Rules-quot: s/PACKAGE VERSION/... because msgfmt complains.

2002-06-17  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(SUBDIRS): Remove intl.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add m4/Makefile.

2002-06-14	<mschimek@users.sf.net>

	* doc/zdoc-scan: Fix re zapping-Bugs-568052. 

2002-06-13	<mschimek@users.sf.net>

	* src/export.c: vbi_export_info_keyword() cuts option string off the
	  keyword, a convenience.

2002-06-08	<mschimek@users.sf.net>

	* src/packet.c: #if fix.
	* zvbi.spec.in: Removed libunicode requirement.
	* Release 0.2.1.

2002-05-23	<mschimek@users.sf.net>

	* macros/autogen.sh: Updated.
	* Release 0.2.

2002-05-20	<mschimek@users.sf.net>

	* configure.in: Inherit env CFLAGS.
	* teletext.c: Triggers a GCC 3.1 bug, do export CFLAGS=-V3.0.4

2002-04-28	<mschimek@users.sf.net>

	* src/packet.c, src/vbi.h, src/event.h: Added Page Format - Clear
	  (ETS 300 708) decoder. Future stuff.
	* src/teletext.c: Some work towards PDC preselection.

2002-04-20	<mschimek@users.sf.net>

	* src/vbi.c, src/event.h: New handler functions identifying handler by
	  func ptr and user data.
	* src/ure.c: If possible use glibc 2.1 wchar_t instead of
	  libunicode.

2002-04-18	<mschimek@users.sf.net>

	* src/io.c, src/io.h, src/io-v4l.c, src/io-v4l2.c: Added function
	  to retrieve fd.
	* contrib: Added x11font by Gerd Knorr.
	* configure.in: Added contrib/Makefile.

2002-04-16	<mschimek@users.sf.net>

	* src/caption.c: Corrected string length assertion in xds_decoder.

2002-04-13	<mschimek@users.sf.net>
