@@ -1,1 +1,1 @@
-EXTRA_DIST = aclocal-include.m4 alsa.m4 as.m4 autogen.sh
+EXTRA_DIST = aclocal-include.m4 alsa.m4 as.m4
