@@ -1,9 +1,8 @@
-$Id: BUGS,v 1.7 2002-06-18 02:27:33 mschimek Exp $
+$Id: BUGS,v 1.8 2002-06-25 04:37:30 mschimek Exp $
 
 * "./osc --sim --pal" caption not recognized
 * v4l and v4l2 i/o can ignore timeout parameter
   > maybe a sleep() loop works, but what about timestamping?
 * vbi_print_page_region() doesn't work as it should:
   Try spaces between words and double height rows.
-* VPATH builds don't, gtk-doc doesn't like that.
- 
+* test/export asserts/crashes w/SRTL text.
